This file contains a summary of changes made and why.
2016Sep08 New keyword "vsi_align" in skedf.ctl. Following files changed: proc_dbbc_pfb_tracks.f, drudg_rdctl.f, drcom.ftni.
2016Sep08  proc_mk5_init2.f:  Output 'jiveab' commands if >2GBS
2016Sep06  proc_exper_initi.f:  Replace 'mk5=status?' with 'mk5_status'
2016Aug23  ../skdrut/stinp.f. 2016Jul28 fix did not work. (index of cfirstrec(i) was unitialized). This fixes it.  
2016Jul28
1. drudg_rdctl.f  Added 'cfirstrec_def' to capture default recorder if 'equipment override' is on in skedf.ctl
2. fdrudg.f       Use 'cfirstrec_def' if 'equipment override' is on in skedf.ctl.
3. ../skdrut/stinp.f   Initialize cfirstrec="1 " even if you  have an error in reading in terminal line. Changed dimension of crack to char*20
4. ../skdrut/unpvt.f   Changed dimension ofrack_type to char*20.

2016Apr07.
1. Fixed typographic bug in proc_disk_tracks with filag10 mode. 

2016Jan19 Lots of changes having to do with supporting DBBC_PFB. Here is a quick summary.
1. ../skdrincl/skparm.ftni: Max_bbc=16-->32
2. proc_setup.f:  Different handling of DBBC_DDC and DBBC_PFB. Modifed to not emit BBC commands if DBBC_PFB. 
3. proc_tracks.f: Call proc_dbbc_pfb_tracks instead of proc_disk_tracks for DBBC_PFB. 
3. proc_dbbc_pfb_tracks.f: New routine to handle various track stuff for DBBC_PFB
4. proc_ifd.f:  Fixed so that emit commands for all IFs. The issue is that DBBCs can re-use the same BBC number.
5. proc_mracks_vc.f:  Changed initialization of some variables since max_bbc-->32.
6. proc_vc_name.f.  Only write out command if cname_vc<> " ". (if DBBC_PFB/* then cname_vc=" ")
7. ../skdrincl/statn.ftni, ../skdrincl/valid_hardware.ftni.  dimensions of cstrack and cstrack_cap increased to handle longer names.
8. ../skdrincl/valid_hardware.ftni.  Increased number of valid racks. 
9. ../skdrut/valid_hardware_blk.f.   DBBC-->DBBC_DDC, added DBBC_PFB, DBBC_PFB/fila10g